--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div class="container">
+            <div class="nav-var">
                <section class="flex-container">
                   <nav>
                    <img src="imagenes/logo.svg" alt="logo" class="logo">
