--- a/index.html
+++ b/index.html
@@ -56,9 +56,33 @@
                     <p class="paragraph2">Our planet is a lonely speck in the great enveloping cosmic
                         dark. In our obscurity, in all this vastness, there is no hint that help will come
                         from elsewhere to save us from ourselves.</p>
-                <img src="imagenes/phone.png" alt="phone" class="phoneImg">
-                </section>
+                <div class="general phone">
+                    <div class="img_phone">       
+                       <img src="imagenes/phone.png" alt="phone" class="phoneImg">
+                    </div>
+                </div>    
+            </section>
+            <section>
+                <h2 class="h2_invitadas">Invitadas/os estelares</h2>
+                <div class="div_invitadas">
+                    <img src="imagenes/grace-hopper.png"  alt="imagenInvitadas" class="img_invitadas">
+                    <img src="imagenes/Katie-Bouman.png"  alt="imagenInvitadas" class="img_invitadas">
+                    <img src="imagenes/Margaret_Hamilton.png"  alt="imagenInvitadas" class="img_invitadas">
+                    <img src="imagenes/An E.R.A.Univac 1103 computer in the 1950s.png"  alt="imagenInvitadas" class="img_invitadas">
+                    <img src="imagenes/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"  alt="imagenInvitadas" class="img_invitadas">
+                    <img src="imagenes/susan-kare.png"  alt="imagenInvitadas" class="img_invitadas">
                 </div>
+            </section>
+            <section>
+                <h2 class="h2_invitadas">Algunos de nuestros temas</h2>
+                <div class="general_icon">
+                    <div class="icono_primero">
+                        <img src="imagenes/icon1.svg" alt="icono" class="foto1">
+                        <p>Trabajo remoto</p>
+                    </div>
+
+                </div>
+            </section>
             </main>
     </body>
 </html>
