--- a/index.html
+++ b/index.html
@@ -75,14 +75,25 @@
             </section>
             <section>
                 <h2 class="h2_invitadas">Algunos de nuestros temas</h2>
-                <div class="general_icon">
+                <div class="flex_container">
                     <div class="icono_primero">
                         <img src="imagenes/icon1.svg" alt="icono" class="foto1">
                         <p>Trabajo remoto</p>
                     </div>
-
+                    <div class="icono_segundo">
+                        <img src="imagenes/icon2.svg" alt="icono" class="foto2">
+                        <p>Repensando la programación</p>
+                    </div>
+                    <div class="icono_tercero">
+                        <img src="imagenes/icon3.svg" alt="icono" class="foto3">
+                        <p>Bases del código</p>
+                     </div>
+                    <div class="icono_cuarto">
+                        <img src="imagenes/icon4.svg" alt="icono" class="foto4">
+                        <p>Seguridad informática</p>
+                    </div>
                 </div>
             </section>
-            </main>
+        </main>
     </body>
 </html>
