--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="style.css">
      <title>Podcast</title>
@@ -30,7 +31,6 @@
                 <div class="intro">
                     <p class="paragraph1">El portal de podcast que explora el mundo de la programación
                     y la tecnología. Nuevos episodios, todos losjueves cada 15 días.</p>
-                    </div>
                     <div class="button">
                         <a href="#"><button class=button1>Conocé más</button></a>
                     </div>
@@ -47,7 +47,7 @@
             </div>
             </div>
         </section>
-            <div class="containerAbout">
+          <div class="containerAbout">
             <h2 class="aboutH2">De dónde venimos</h2>
             <section class="about">
                 <p class="paragraph2">Our posturings, our imagined self-importance, the delusion
@@ -60,7 +60,8 @@
                     <div class="img_phone">       
                        <img src="imagenes/phone.png" alt="phone" class="phoneImg">
                     </div>
-                </div>    
+                </div> 
+          </div>  
             </section>
             <section>
                 <h2 class="h2_invitadas">Invitadas/os estelares</h2>
@@ -94,6 +95,52 @@
                     </div>
                 </div>
             </section>
+            <section class="background">
+                <div class="">
+                    <h3>¿Querés las últimas novedades?</h3>
+                </div>
+                <div class="button2">
+                    <a href="#"><button class=button2>ESCUCHÁ LOS EPISODIOS</button></a>
+                </div>
+            </section>
         </main>
+        <footer>
+            <div>
+                <ul class="nav-items2">
+                    <li class="logo2">
+                        <p class="texto">
+                            © 2019 - Hello blue pale dot
+                        </p>
+                    </li>
+                    <!-- Contenido Right -->
+                    <li class="nav-item2">
+                        <a class="nav-item2" href="https://open.spotify.com/" target=_blank>
+                            <i class="fab fa-spotify"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item2">
+                        <a class="nav-item2" href="https://www.instagram.com/" target=_blank>
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item2">
+                        <a href="https://twitter.com/" target=_blank class="nav-item2">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item2">
+                        <a href="https://www.facebook.com/" target=_blank class="nav-item2">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item2">
+                        <a href="https://web.telegram.org/" target=_blank class="nav-item2">
+                            <i class="fab fa-telegram"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>    
     </body>
 </html>
