--- a/index.html
+++ b/index.html
@@ -38,13 +38,23 @@
             </section>
         <section class="diagonal">
             <div class="fondo1">
-                <div class="container">
-                <h2 class="whiteText1">Episodios</h2>
-                <img src="imagenes/embed1.png" alt="spotifylinks" class="spotifyembed">
-                <img src="imagenes/embed2.png" alt="spotifylinks" class="spotifyembed">
-                <img src="imagenes/embed3.png" alt="spotifylinks" class="spotifyembed">
-                <img src="imagenes/embed4.png" alt="spotifylinks" class="spotifyembed">
-            </div>
+                    <div class="spotify">
+                        <h2 class="whiteText1">Episodios</h2>
+                        <div>
+                            <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" class="iframes" allow="encrypted-media"></iframe>
+                        </div>
+                        <div>
+                            <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" class="iframes" allow="encrypted-media"></iframe>
+                        </div>
+                    </div>
+                    <div class="spotify padding">
+                        <div>
+                            <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" class="iframes" allow="encrypted-media"></iframe>
+                        </div>
+                        <div>
+                            <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" class="iframes" allow="encrypted-media"></iframe>
+                        </div>
+                    </div>
             </div>
         </section>
           <div class="containerAbout">
@@ -112,7 +122,6 @@
                             © 2019 - Hello blue pale dot
                         </p>
                     </li>
-                    <!-- Contenido Right -->
                     <li class="nav-item2">
                         <a class="nav-item2" href="https://open.spotify.com/" target=_blank>
                             <i class="fab fa-spotify"></i>
