--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/afe9660a17.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&family=IBM+Plex+Sans:wght@300;600&display=swap" rel="stylesheet">
      <link rel="stylesheet" href="style.css">
      <title>Podcast</title>
     </head>
@@ -38,41 +38,29 @@
             </section>
         <section class="diagonal">
             <div class="fondo1">
-                    <div class="spotify">
-                        <h2 class="whiteText1">Episodios</h2>
-                        <div>
-                            <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" class="iframes" allow="encrypted-media"></iframe>
-                        </div>
-                        <div>
+                <h2>Episodios</h2>
+                    <div class="container2">
+                            <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" class="iframes" allow="encrypted-media"></iframe>    
                             <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" class="iframes" allow="encrypted-media"></iframe>
-                        </div>
-                    </div>
-                    <div class="spotify padding">
-                        <div>
                             <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" class="iframes" allow="encrypted-media"></iframe>
-                        </div>
-                        <div>
                             <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" class="iframes" allow="encrypted-media"></iframe>
-                        </div>
                     </div>
             </div>
         </section>
-          <div class="containerAbout">
-            <h2 class="aboutH2">De dónde venimos</h2>
-            <section class="about">
-                <p class="paragraph2">Our posturings, our imagined self-importance, the delusion
+        <section class="containerAbout">
+            <div class="about">
+                <h3>De dónde venimos</h3>
+                    <p class="paragraph2">Our posturings, our imagined self-importance, the delusion
                     that we have some privileged position in the Universe, are challenged by this point
                     of pale light.</p>
                     <p class="paragraph2">Our planet is a lonely speck in the great enveloping cosmic
                         dark. In our obscurity, in all this vastness, there is no hint that help will come
                         from elsewhere to save us from ourselves.</p>
-                <div class="general phone">
                     <div class="img_phone">       
                        <img src="imagenes/phone.png" alt="phone" class="phoneImg">
                     </div>
-                </div> 
-          </div>  
-            </section>
+            </div>  
+        </section>
             <section>
                 <h2 class="h2_invitadas">Invitadas/os estelares</h2>
                 <div class="div_invitadas">
@@ -105,7 +93,7 @@
                     </div>
                 </div>
             </section>
-            <section class="background">
+            <section class="container3">
                 <div class="">
                     <h3>¿Querés las últimas novedades?</h3>
                 </div>
