--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p class="paragraph1">El portal de podcast que explora el mundo de la programación
                     y la tecnología. Nuevos episodios, todos losjueves cada 15 días.</p>
                     <div class="button">
-                        <a href="#"><button class=button1>Conocé más</button></a>
+                        <button class=button1>Conocé más</button>
                     </div>
                 </div>
             </section>
