--- a/index.html
+++ b/index.html
@@ -25,42 +25,43 @@
             </div>
         </header>
         <main>
-            <section class="intro">
-                <div class="container">
-    <h1>Hello <span class="lineTrough">world</span> pale blue dot<span class="blueDot">.</span></h1>
-                <div class="intro">
-                    <p class="paragraph1">El portal de podcast que explora el mundo de la programación
-                    y la tecnología. Nuevos episodios, todos losjueves cada 15 días.</p>
-                    <div class="button">
-                        <button class=button1>Conocé más</button>
+            <div class="max-width flex-container">
+                <section class="contenedor1 flex-container-section1">
+                    <h1>Hello <span class="tachado">world</span> pale blue dot<span class="punto">.</span></h1>
+                    <p class="parrafo1">El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los jueves cada 15 días.</p>
+                    <div>
+                        <button class="conoce_mas_boton"><strong>CONOCÉ MÁS</strong></button>
                     </div>
-                </div>
-            </section>
-        <section class="diagonal">
-            <div class="fondo1">
-                <h2>Episodios</h2>
-                    <div class="container2">
-                            <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" class="iframes" allow="encrypted-media"></iframe>    
-                            <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" class="iframes" allow="encrypted-media"></iframe>
-                            <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" class="iframes" allow="encrypted-media"></iframe>
-                            <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" class="iframes" allow="encrypted-media"></iframe>
-                    </div>
+                </section>
             </div>
-        </section>
-        <section class="containerAbout">
-            <div class="about">
-                <h3>De dónde venimos</h3>
-                    <p class="paragraph2">Our posturings, our imagined self-importance, the delusion
-                    that we have some privileged position in the Universe, are challenged by this point
-                    of pale light.</p>
-                    <p class="paragraph2">Our planet is a lonely speck in the great enveloping cosmic
-                        dark. In our obscurity, in all this vastness, there is no hint that help will come
-                        from elsewhere to save us from ourselves.</p>
-                    <div class="img_phone">       
-                       <img src="imagenes/phone.png" alt="phone" class="phoneImg">
+            <div class="contenedor2" id="episodios">
+                <div class="box1">
+                    
+                        <div class="episodios flex-container-section2 max-width">
+                            <h2>Episodios</h2>
+                            <div class="img-iframes max-width">
+                                <iframe src="https://open.spotify.com/embed-podcast/episode/6eCHJ8yOYtksW8OT93Dbdu" allow="encrypted-media" class="iframes"></iframe>
+                                <iframe src="https://open.spotify.com/embed-podcast/episode/4S5QD7bpt8qDsIQ6llpCTD" allow="encrypted-media" class="iframes"></iframe>
+                                <iframe src="https://open.spotify.com/embed-podcast/episode/2w2riihRU3u2PXSPyOujJZ" allow="encrypted-media" class="iframes"></iframe>
+                                <iframe src="https://open.spotify.com/embed-podcast/episode/6P7UQbfmemJNWA99jwol6k" allow="encrypted-media" class="iframes"></iframe>
+                            </div>
+                        </div>
+                    
+                </div>
+            </div>
+            <div class="contenedor3 max-width" id="nosotros">
+                <section class="flex-container-section3">
+                    <div>
+                        <img src="imagenes/phone.png" alt="Phone" class="phone">
                     </div>
-            </div>  
-        </section>
+                    <div class="parrafo-contenedor3">
+                        <h2>De dónde venimos</h2>
+                        <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.</p>
+                        <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves.</p>
+                    </div>
+                </section>
+            </div>
+
             <section>
                 <h2 class="h2_invitadas">Invitadas/os estelares</h2>
                 <div class="div_invitadas">
